--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
-    "gulp-uglify": "^3.0.2",
-    "tailwindcss": "^1.1.3"
+    "gulp-uglify": "^3.0.2"
+  },
+  "dependencies": {
+    "animejs": "^3.1.0"
   }
 }
