--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "gulp-uglify": "^3.0.2",
     "tailwindcss": "^1.1.3",
     "webpack-stream": "^5.2.1"
+  },
+  "dependencies": {
+    "animejs": "^3.1.0"
   }
 }
